--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Webzine text 3</title>
-  </head>
-  <body>
-    <p><b>We</b> didn't &nbsp;r&nbsp;e&nbsp;a&nbsp;l&nbsp;i&nbsp;z&nbsp;e&nbsp;&nbsp; we were <b>making</b> memories, we just knew we were having fun....</p>
-  </body>
+<head>
+  <title>Webzine text 3</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="word-container">
+    <span class="up"><b>We</b></span>
+    <span class="down">didn't</span>
+    <span class="up spaced">r&nbsp;e&nbsp;a&nbsp;l&nbsp;i&nbsp;z&nbsp;e</span>
+    <span class="down">we</span>
+    <span class="up">were</span>
+    <span class="down"><b>making</b></span>
+    <span class="up">memories,</span>
+    <span class="down">we</span>
+    <span class="up">just</span>
+    <span class="down">knew</span>
+    <span class="up">we</span>
+    <span class="down">were</span>
+    <span class="up">having</span>
+    <span class="down">fun....</span>
+  </div>
+</body>
 </html>
